# AuraFrameFxBETA

./: README.md  build.gradle.kts  generate-apis.ps1  gradle.properties  local.properties  settings.gradle.kts
.github/workflows/: main.yml  manual.yml
api-spec/: aura-framefx-api.yaml
app/: build.gradle.kts
app/ai_backend/: genesis_connector.py  requirements.txt
app/api-spec/: aura-framefx-api.yaml
app/src/cpp/: CMakeLists.txt  native-lib.cpp.txt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/example/app/ipc/: IAuraDriveService.aidl
app/src/main/cpp/: CMakeLists.txt  language_id_l2c_jni.cpp
app/src/main/java/com/example/app/ipc/: OracleDriveServiceConnector.kt
app/src/main/java/com/example/app/viewmodel/: OracleDriveControlViewModel.kt
app/src/main/java/dev/aurakai/auraframefx/: AuraFrameApplication.kt  MainActivity.kt
app/src/main/java/dev/aurakai/auraframefx/ai/: AiGenerationService.kt  AuraAIService.kt  AuraAIServiceImpl.kt  AuraController.kt  VertexAIConfig.kt
app/src/main/java/dev/aurakai/auraframefx/auth/: OAuthService.kt
app/src/main/java/dev/aurakai/auraframefx/context/: ContextManager.kt
app/src/main/java/dev/aurakai/auraframefx/data/: AppStateManager.kt  UserPreferences.kt
app/src/main/java/dev/aurakai/auraframefx/di/: AppModule.kt  AppStateModule.kt  AuraFxAiApiModule.kt  DataStoreModule.kt  NeuralWhisperModule.kt  VertexAIModule.kt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
docs/: OpenAPI-Generation-Guide.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+98 files in other folders)
